// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea/TextAreaPresenter renders with all props 1`] = `
<div
  className="hig__text-area hig__text-area--required"
>
  <textarea
    className="hig__text-area__field hig__text-area__field--has-value"
    disabled={false}
    id="text-area-1"
    maxLength={2}
    minLength={2}
    name="text area"
    placeholder="this is placeholder text"
    readOnly={true}
    required="this information is required"
    type="a type of checkbox"
    value="value!"
  />
  <label
    className="hig__text-area__label hig__text-area__label--visible"
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is a text area",
      }
    }
    htmlFor="text-area-1"
  />
  <p
    className="hig__text-area__instructions hig__text-area__instructions--visible"
    dangerouslySetInnerHTML={
      Object {
        "__html": "write stuff in me",
      }
    }
  />
  <p
    className="hig__text-area__required-notice"
    dangerouslySetInnerHTML={
      Object {
        "__html": "this information is required",
      }
    }
  />
</div>
`;

exports[`TextArea/TextAreaPresenter renders without props 1`] = `
<div
  className="hig__text-area hig__text-area--required"
>
  <textarea
    className="hig__text-area__field hig__text-area__field--no-value"
    id="text-area-1"
    placeholder="Enter your comments here."
    required="This field is required."
  />
  <label
    className="hig__text-area__label hig__text-area__label--visible"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Comments",
      }
    }
    htmlFor="text-area-1"
  />
  <p
    className="hig__text-area__instructions"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <p
    className="hig__text-area__required-notice"
    dangerouslySetInnerHTML={
      Object {
        "__html": "This field is required.",
      }
    }
  />
</div>
`;
